[ADD] Integración con Firebase y rules de index de sections

--- a/firebase.json
+++ b/firebase.json
@@ -5,5 +5,12 @@
     "firebase.json",
     "**/.*",
     "**/node_modules/**"
-  ]
+  ],
+  "rules": {
+    ".read": true,
+    ".write": true,
+    "sections": {
+    	".indexOn" : ["order"]
+    }
+  }
 }
