[ADD] Local mode

--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,17 @@
 {
-  "firebase": "agilemeter",
-  "public": "dist",
-  "ignore": [
+  "hosting": {
+    "public": "dist",
+    "ignore": [
     "firebase.json",
     "**/.*",
     "**/node_modules/**"
-  ],
-  "rules": {
-    ".read": true,
-    ".write": true,
-    "sections": {
-    	".indexOn" : ["order"]
+    ],
+    "rules": {
+      ".read": true,
+      ".write": true,
+      "sections": {
+        ".indexOn" : ["order"]
+      }
     }
   }
 }
